// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package sight.x.widgets.flume.proto;

message FlumeDoFnCreate {
  string label = 1;
}

message FlumeDoFnComplete {
  string label = 1;
}

message FlumeDoFnStartDo {
  int64 input_stage_id = 1;
  int64 input_item_id = 2;

  // Indicates whether this do function corresponds to an Sight=internal
  // data management operation and should thus be used merely as a link from
  // input item to any of the stage's outputs.
  bool is_passthrough = 3;
}

message FlumeDoFnEndDo {
  int64 input_stage_id = 1;
}

message FlumeDoFnEmit {
  int64 stage_id = 1;
  int64 item_id = 2;
}

message FlumeDepend {
  int64 input_stage_id = 1;
  int64 input_item_id = 2;
}

message FlumeCompareFnCreate {
  string label = 1;
}

message FlumeCompareFnComplete {
  string label = 1;
}
message FlumeCompareFnStartCompare {
  int64 input1_stage_id = 1;
  int64 input1_item_id = 2;
  int64 input2_stage_id = 3;
  int64 input2_item_id = 4;
}

message FlumeCompareFnEndCompare {
  int64 input_stage_id = 1;
} 